DRP: Do not fetch warm up URL on offline connections

This CL makes a change to not fetch preconnect / warmup URL for data
reduction proxy (DRP) if the connectivity is unavailable.

BUG=691620
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2687193006
Cr-Commit-Position: refs/heads/master@{#450589}

Former-commit-id: 73319e0970ff6421af9ebd06e6cef8de27a8d42b